--- a/campuscarrier-managertool/package.json
+++ b/campuscarrier-managertool/package.json
@@ -10,7 +10,7 @@
     "react-file-reader": "^1.1.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-css": "2.2.12",
     "semantic-ui-react": "0.77.2"
   },
   "scripts": {
